change Board API : add users list to evert board in GET /api/projects/{projectId}/boards
